build/log/idf_py_stderr_output_22636
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:86:17: error: 'measurement_mm' undeclared (first use in this function); did you mean 'measurement'?
   86 |                 measurement_mm= (readBuffer[7] << 24| readBuffer[8] << 16| readBuffer[9] << 8|readBuffer[10]);
      |                 ^~~~~~~~~~~~~~
      |                 measurement
/home/bmetal/esp-idf/uartTest/main/uartTest.c:86:17: note: each undeclared identifier is reported only once for each function it appears in
/home/bmetal/esp-idf/uartTest/main/uartTest.c:87:17: error: 'measurement_ft' undeclared (first use in this function); did you mean 'measurement'?
   87 |                 measurement_ft = (measurement * 0.00328084)
      |                 ^~~~~~~~~~~~~~
      |                 measurement
/home/bmetal/esp-idf/uartTest/main/uartTest.c:87:60: error: expected ';' before 'do'
   87 |                 measurement_ft = (measurement * 0.00328084)
      |                                                            ^
      |                                                            ;
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
